# cryptalias

./: .gitignore  Dockerfile  PROTOCOL.md  README.md  config.example.yml  docker-compose.yml  go.mod  go.sum  gqlgen.yml
.github/workflows/: docker.yml
clients/: README.md
clients/cpp/: README.md  cryptalias_client.cpp  cryptalias_client.hpp  cryptalias_client_test.cpp
clients/dart/: README.md  pubspec.yaml
clients/dart/lib/: cryptalias_client.dart
clients/go/: README.md  go.mod  resolve.go  resolve_test.go
clients/javascript/: README.md  client.mjs  client.test.mjs
clients/kotlin/: CryptaliasClient.kt  CryptaliasClientTest.kt  README.md
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/swift/: CryptaliasClient.swift  CryptaliasClientTests.swift  README.md
clients/testdata/: jws.json
clients/typescript/: index.ts  tsconfig.json
cmd/cryptalias/: main.go
graph/: generated.go  schema.resolvers.go
internal/cryptalias/: address_store.go  alias.go  alias_dynamic_test.go  client_identity.go  config.go  config_alias_test.go  config_store.go  config_store_test.go  config_watch.go  crypto.go  domain_status.go  domain_verify.go  domain_verify_test.go  grpc_wallet_client.go  handlers.go  handlers_test.go  health_handler.go  health_handler_test.go  internal_wallets.go  keys.go  logger.go  logger_test.go  monero_internal.go  rate_limit.go  resolve.go  resolve_test.go  server.go  status_handler.go  types.go  wallet_resolver.go  wallet_resolver_cache_test.go
wallet_interfaces/: wallet_interface.go
wallet_interfaces/xmr/: xmr.go
(+7 files in other folders)
