[package]
name = "cryptalias-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
urlencoding = "2"
ed25519-dalek = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
